# char_rnn

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  flake.nix  pylintrc  pyproject.toml  requirements.txt  setup.py
.direnv/: flake-profile-1-link
.github/workflows/: publish-package.yml
scripts/: evaluate.py  inference.py  train.py
src/char_rnn/: __main__.py  activations.py  data.py  initializers.py  layers.py  loss.py  losses.py  model.py  models.py  optimizers.py  preprocessing.py  util.py  utils.py
src/char_rnn/layers/: base.py  embedding.py
src/char_rnn/scripts/: evaluate.py  inference.py  train.py
