[project]
name = "char-rnn"
version = "0.1.0.dev1"
description = "A character-level recurrent neural network implementation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.2",
    "requests>=2.32.4",
]
license = "MIT"
license-files = [ "LICENSE" ]

authors = [
    { name = "matee8", email = "graves-bluff-pesky@duck.com" }
]

keywords = ["text-generation", "neural-network", "machine-learning"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/matee8/char_rnn"
Repository = "https://github.com/matee8/char_rnn"
Issues = "https://github.com/matee8/char_rnn/issues"

[project.scripts]
char-rnn-train = "char_rnn.scripts.train:main"
char-rnn-evaluate = "char_rnn.scripts.evaluate:main"
char-rnn-inference = "char_rnn.scripts.inference:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
